# This is a combination of 2 commits. # The first commit's message is:
client side identification for esri feature services

# This is the 2nd commit message:

adds clustering related js/css files

--- a/app/assets/stylesheets/geoblacklight/_geoblacklight.scss
+++ b/app/assets/stylesheets/geoblacklight/_geoblacklight.scss
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  */
+
 @import 'leaflet';
 @import 'geoblacklight-icons-rails';
 
@@ -26,3 +27,5 @@
 @import 'modules/search_widgets';
 @import 'modules/toolbar';
 @import 'modules/web_services';
+@import 'MarkerCluster.css';
+@import 'MarkerCluster.Default.css';
