--- a/app/assets/stylesheets/geoblacklight/application.scss
+++ b/app/assets/stylesheets/geoblacklight/application.scss
@@ -1,3 +1,24 @@
+@import 'bootstrap-variables';
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'blacklight_defaults';
 @import 'geoblacklight/geoblacklight';
+
+#header-navbar {
+  .navbar-brand {  /* The main logo image for the Blacklight instance */
+  	width: 305px;
+    height: 100px;
+	  background:transparent image_url($logo_image) no-repeat top left;
+	  display: inline-block;
+	  text-indent: 100%;
+	  white-space: nowrap;
+	  overflow: hidden;
+	  padding-right:0;
+	  margin-right:20px;
+	  padding-left: 0;
+  }
+}
+
+.jumbotron {
+
+}
