--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -1,4 +1,4 @@
-<div id="header-navbar" class="navbar navbar-inverse navbar-static-top" role="navigation">
+<div id="header-navbar" class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#user-util-collapse">
@@ -17,7 +17,7 @@
 </div>
 
 <% if controller_name == 'catalog' && has_search_parameters? %>
-  <div id="search-navbar" class="navbar navbar-default navbar-static-top" role="navigation">
+  <div id="search-navbar" class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
       <%= render_search_bar  %>
     </div>
